--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
         Calculate
       </div>
     </div>
-    <script src="/dist/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
